Removed menu dependence on PureCSS grids and fixed menu jump bug

--- a/css/main.css
+++ b/css/main.css
@@ -87,18 +87,27 @@ i:hover {
 }
 
 .nav-wrapper {
-    height: 41px;
+    height: auto;
 }
 
 #nav {
-    background: #111111;
+    width: 100%;
+    background: #111111;   
     text-align: center;
     opacity: 0.85;
+    z-index: 3;
+}
+
+#nav ul {
+    list-style: none;
+    padding: 0;
 }
 
 #nav li {
+    margin: 7px 2px;
     padding: 4px;
     font-weight: 700;
+    display: inline-block; 
 }
 
 #nav li a {
@@ -227,10 +236,6 @@ i:hover {
         padding: 6px;
     }
 
-    .nav-wrapper {
-        height: 46px;
-    }
-
     .portrait {    
         width: 160px;
         height: 160px;
@@ -265,10 +270,6 @@ i:hover {
 
     #nav li {
         padding: 7px;
-    }
-
-    .nav-wrapper {
-        height: 50px;
     }
 
     .portrait {    
